--- a/contato.html
+++ b/contato.html
@@ -9,7 +9,7 @@
     <body>
         <header>
             <div class="caixa">
-                    <h1><img src="logo.png"></h1>
+                    <h1><img src="logo.png" alt="logo da Barbearia Alura"></h1>
                 <nav>
                         <ul>
                             <li><a href="index.html">Home</a></li>
@@ -23,18 +23,18 @@
           <main>
             <form>
                <label form="nomesobrenome"> Nome e Sobrenome </label>
-               <input type="text"  id="nomesobrenome" class="input-padrao">
+               <input type="text"  id="nomesobrenome" class="input-padrao" required>
 
                 <label for="Email">Email</label>
-                <input type="text" id="Email" class="input-padrao">
+                <input type="email" id="Email" class="input-padrao" required placeholder="seuemail@dominio.com">
 
                 <label for="Telefone">Telefone</label>
-                <input type="text" id="Telefone" class="input-padrao">
+                <input type="tel" id="Telefone" class="input-padrao" required placeholder="(xx) xxxxx-xxxx">
 
                 <label for="mensagem">Mensage,</label>
-                <textarea cols="30" rows="10" id="mensagem" class="input-padrao"></textarea>
+                <textarea cols="30" rows="10" id="mensagem" class="input-padrao" required></textarea>
 
-                <div>
+                <fieldset>
                     <p class="teste" id="teste" style="color: purlple;">Como prefere o nossso contato?</p>
                     <label for="radio-email"><input type="radio" name="contato" value="Email" id="radio-email">
                         Email</label>
@@ -43,26 +43,49 @@
                         Telefone</label>
                     
 
-                    <label for="radio-whatsapp"> <input type="radio" name="contato" value="Whatsapp" id="radio-whatsapp">Whatsapp</label>
-                </div>
+                    <label for="radio-whatsapp"> <input type="radio" name="contato" value="Whatsapp" id="radio-whatsapp" checked>Whatsapp</label>
+                </fieldset> 
 
-                <div>
-                    <p>Qual horário prefere ser atendido?</p>
+                <fieldset>
+                    <legend>Qual horário prefere ser atendido?</legend>
                     <select>
                         <option>Manhã</option>
                         <option>Tarde </option>
                         <option>Noite</option>
                     </select>
-                </div>    
+                </fieldset>    
                 
-                <label class="checkbox"><input type="checkbox">Gostaria de receber nossas novidades por Email?</label>
+                <label class="checkbox"><input type="checkbox" checked>Gostaria de receber nossas novidades por Email?</label>
 
-                 <input type="submit" value="Enviar Formulário">                    
+                 <input type="submit" value="Enviar Formulário" class="enviar">                    
             </form>
+
+            <table>
+                <thead>
+                    <tr>
+                        <th>Dia</th>
+                        <th>Horário</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>Segunda</td>
+                        <td>8h ~ 20h</td>
+                    </tr>
+                    <tr>
+                        <td>Quarta</td>
+                        <td>8h ~ 20h</td>
+                    </tr>
+                    <tr>
+                        <td>Sexta</td>
+                        <td>8h ~ 20h</td>
+                    </tr>
+                </tbody>    
+            </table>
           </main>
 
         <footer>
-            <img src="logo-branco.png">
+            <img src="logo-branco.png" alt="logo da Barbearia Alura">
             <p class="copyright">&copy;Copyright Barbearia Alura - 2019</p>
 
         </footer>
