--- a/produtos.html
+++ b/produtos.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <title>Produtos - Barbearia Alura</title>
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="produtos.css">
         <link rel="stylesheet" href="reset.css">
     </head>
     <body>
@@ -14,7 +14,7 @@
                         <ul>
                             <li><a href="index.html">Home</a></li>
                             <li><a href="produtos.html">Produtos</a></li>
-                            <li><a href="contatos.html">contatos</a></li>
+                            <li><a href="contatos.html">Contatos</a></li>
                         </ul>
                 </nav>
           </div>
